kubernetes/paperless-ngx/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  annotations:
    openshift.io/sa.scc.mcs: s0:c30,c0
  labels:
    app.kubernetes.io/instance: paperless-ngx
    kubernetes.io/metadata.name: paperless-ngx
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
