kubernetes/paperless-ngx/base/deployment-valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-valkey
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: paperless-ngx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: valkey
      app.kubernetes.io/instance: paperless-ngx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: valkey
        app.kubernetes.io/instance: paperless-ngx
    spec:
      automountServiceAccountToken: false
      containers:
        - name: valkey
          image: quay.io/sclorg/valkey-8-c10s:c10s@sha256:ac1e8f168eecd2dec3c7f88280b62ba537bf4b6d0c4f231c5f8c4a6eef3ca4a8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping | grep PONG"]
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping | grep PONG"]
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping | grep PONG"]
            failureThreshold: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /var/lib/valkey/data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx-valkey
