kubernetes/paperless-ngx/base/service-paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
  type: ClusterIP
