kubernetes/paperless-ngx/base/service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-valkey
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: paperless-ngx
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: paperless-ngx
  type: ClusterIP
