kubernetes/paperless-ngx/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
spec:
  host: paperless.apps.okd.claffey.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: paperless-ngx
    weight: 100
  wildcardPolicy: None
